--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="Header">
             <a href="#" class="myButton">Home</a>
             <a href="#" class="myButton">Quienes Somos</a>
-            <a href="#" class="myButton">Contacto</a>
+            <a href="#" class="myButton">Contactanos</a>
 
             <div id="loginbox">
                 <form action="./index.html">
